compiler/lume_parser/src/snapshots/lume_parser__tests__is_snapshots@literal.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(Target :: Statement, \"0 is 0;\")"
---
SOURCE_FILE@0..7
  EXPR_STMT@0..7
    IS_EXPR@0..6
      LIT_EXPR@0..1
        INTEGER_LIT@0..1
          INTEGER_LIT@0..1 "0"
      WHITESPACE@1..2 " "
      IS_KW@2..4 "is"
      WHITESPACE@4..5 " "
      PAT_LITERAL@5..6
        INTEGER_LIT@5..6
          INTEGER_LIT@5..6 "0"
    SEMICOLON@6..7 ";"
