compiler/lume_parser/src/snapshots/lume_parser__tests__is_snapshots@variant.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(Target :: Statement, \"0 is Foo::A;\")"
---
SOURCE_FILE@0..12
  EXPR_STMT@0..12
    IS_EXPR@0..11
      LIT_EXPR@0..1
        INTEGER_LIT@0..1
          INTEGER_LIT@0..1 "0"
      WHITESPACE@1..2 " "
      IS_KW@2..4 "is"
      WHITESPACE@4..5 " "
      PAT_VARIANT@5..11
        PATH@5..11
          PATH_TYPE@5..8
            NAME@5..8
              IDENT@5..8 "Foo"
          PATH_SEP@8..10 "::"
          PATH_VARIANT@10..11
            NAME@10..11
              IDENT@10..11 "A"
    SEMICOLON@11..12 ";"
