compiler/lume_parser/src/snapshots/lume_parser__tests__is_snapshots@wildcard.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"0 is ..;\")"
---
SOURCE_FILE@0..8
  EXPR_STMT@0..8
    IS_EXPR@0..7
      LIT_EXPR@0..1
        INTEGER_LIT@0..1
          INTEGER_LIT@0..1 "0"
      WHITESPACE@1..2 " "
      IS_KW@2..4 "is"
      WHITESPACE@4..5 " "
      PAT_WILDCARD@5..7
        DOT_DOT@5..7 ".."
    SEMICOLON@7..8 ";"
