compiler/lume_parser/src/snapshots/lume_parser__tests__literal_snapshots@bool_false.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"false;\")"
---
SOURCE_FILE@0..6
  EXPR_STMT@0..6
    LIT_EXPR@0..5
      BOOLEAN_LIT@0..5
        BOOLEAN_LIT@0..5 "false"
    SEMICOLON@5..6 ";"
