compiler/lume_parser/src/snapshots/lume_parser__tests__literal_snapshots@bool_true.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"true;\")"
---
SOURCE_FILE@0..5
  EXPR_STMT@0..5
    LIT_EXPR@0..4
      BOOLEAN_LIT@0..4
        BOOLEAN_LIT@0..4 "true"
    SEMICOLON@4..5 ";"
