compiler/lume_parser/src/snapshots/lume_parser__tests__literal_snapshots@ident.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_expr(\"ident\")"
---
[
    Expression(
        Variable(
            Variable {
                name: Identifier {
                    name: "ident",
                    location: Location(
                        0..5,
                    ),
                },
            },
        ),
    ),
]
