compiler/lume_parser/src/snapshots/lume_parser__tests__literal_snapshots@int.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"0;\")"
---
SOURCE_FILE@0..2
  EXPR_STMT@0..2
    LIT_EXPR@0..1
      INTEGER_LIT@0..1
        INTEGER_LIT@0..1 "0"
    SEMICOLON@1..2 ";"
